[package]
name = "flat-tree"
version = "1.1.0"
description = "Rust module for encoding/decoding varints that doesn't do any IO. Inspired by the Node.js varint module"
authors = ["Mathias Buus <mathiasbuus@gmail.com>"]
repository = "https://github.com/mafintosh/flat-tree-rs"
keywords = ["flat", "tree", "binary"]
readme = "README.md"
license = "MIT"
